--- a/public/css/icinga/main.less
+++ b/public/css/icinga/main.less
@@ -1,5 +1,48 @@
 /*! Icinga Web 2 | (c) 2014 Icinga Development Team | GPLv2+ */
 
+#announcements {
+  padding: 0;
+  margin: 0;
+  background: @gray-lightest;
+  box-shadow: inset 0 0 12px rgba(0,0,0,.2);
+
+  > li:before {
+    content: "\e811";
+    background: rgba(0,0,0,.1);
+    font-size: 1.4285em;
+    font-family: 'iFont';
+    text-align: center;
+    vertical-align: middle;
+    display: block;
+    background: rgba(0,0,0,.1);
+    position: absolute;
+    top: 6px; left: 6px;
+    padding: .75em;
+    border-radius: 50%;
+  }
+
+  > li {
+    position: relative;
+    list-style-type: none;
+    padding: 1em 4.5714em 1em 4.5714em;
+    min-height: 64px;
+    border-bottom: 1px solid @gray-lighter;
+  }
+
+  > li:last-child {
+    border-bottom: none;
+  }
+
+  .button-close {
+    position: absolute;
+    display: block;
+    top: 50%; right: 12px;
+    margin-top: -11px;
+    background: none;
+    border: none;
+  }
+}
+
 // Width for the name column--th--of name-value-table
 @name-value-table-name-width: 14em;
 
