CSS: Optimize announce-icon size

--- a/public/css/icinga/main.less
+++ b/public/css/icinga/main.less
@@ -11,20 +11,18 @@
     background: rgba(0,0,0,.1);
     font-size: 1.4285em;
     font-family: 'iFont';
+    color: @text-color-light;
     text-align: center;
-    vertical-align: middle;
-    display: block;
-    background: rgba(0,0,0,.1);
     position: absolute;
     top: 6px; left: 6px;
-    padding: .75em;
+    padding: .4em;
     border-radius: 50%;
   }
 
   > li {
     position: relative;
     list-style-type: none;
-    padding: 1em 4.5714em 1em 4.5714em;
+    padding: 1em 4em 1em 4em;
     min-height: 64px;
     border-bottom: 1px solid @gray-lighter;
   }
