--- a/public/css/icinga/main.less
+++ b/public/css/icinga/main.less
@@ -14,17 +14,19 @@
     color: @text-color-light;
     text-align: center;
     position: absolute;
-    top: 6px; left: 6px;
-    padding: .4em;
+    left: .5em;
+    padding: .3em;
     border-radius: 50%;
+    line-height: 1;
   }
 
   > li {
     position: relative;
     list-style-type: none;
     padding: 1em 4em 1em 4em;
-    min-height: 64px;
     border-bottom: 1px solid @gray-lighter;
+    font-size: .8572em;
+    line-height: 1.4;
   }
 
   > li:last-child {
@@ -34,8 +36,7 @@
   .button-close {
     position: absolute;
     display: block;
-    top: 50%; right: 12px;
-    margin-top: -11px;
+    top: 1em; right: 12px;
     background: none;
     border: none;
   }
